# sca_data_prep

./: .gitignore  .hf_dataset_md5  README.md  audio_processing.py  constants.py  decode_audio_test.py  inference.py  main.py  precommit.sh  preprocess.py  pyproject.toml  test.ipynb  test.py  utils.py
.github/workflows/: main
Multi-stream Spontaneous Conversation Training Dataset/: README.txt  SPKINFO.txt  UTTERANCEINFO.txt
Multi-stream Spontaneous Conversation Training Dataset/TXT/: Group0006_S001_0_ID164.txt  Group0006_S001_0_ID165.txt  Group0030_S004_0_ID024.txt  Group0030_S004_0_ID029.txt  Group0046_S009_0_ID023.txt  Group0046_S009_0_ID026.txt  Group0078_S004_0_ID098.txt  Group0078_S004_0_ID099.txt  Group0078_S005_0_ID098.txt  Group0078_S005_0_ID099.txt  Group0078_S009_0_ID098.txt  Group0078_S009_0_ID099.txt  Group0078_S013_0_ID098.txt  Group0078_S013_0_ID099.txt  Group0078_S015_0_ID098.txt  Group0078_S015_0_ID099.txt
models/: downloads.py
scripts/: convert_dataset.py  download.py  make_dataset_duplex.py  search.py  transcode.sh
src/sca_data/: dataset_utils.py  utils.py
test/: test.py
