[project]
name = "data-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.8",
    "langchain-core>=1.0.7",
    "langchain-openai>=1.0.3",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "pytube>=15.0.0",
    "pytubefix>=10.3.4",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.8.1",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.11.12",
]

[dependency-groups]
dev = [
    "notebook>=7.5.0",
]
